<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/drawingToolToolbar"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_drawing_tool"
        app:navigationIcon="@drawable/ic_nav_back"
        app:title="@string/drawing_tool_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/drawingToolTabLayout"
        style="@style/TabLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_favorites" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_statistics" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_technicals" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_fibonacci" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_markings" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawing_tool_category_lines" />

    </com.google.android.material.tabs.TabLayout>

    <include
        android:id="@+id/noFavoriteDrawingToolsPlaceHolder"
        layout="@layout/placeholder_no_favorite_drawing_tools_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_huge_small"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="@dimen/margin_huge_small"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drawingToolRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>