<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_study">

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.chartiq.demo.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.chartiq.demo.ui.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.chartiq.demo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
