<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bottomSettingsTextView"
        style="@style/SecondaryMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_menu_settings"
        android:drawablePadding="@dimen/padding_large"
        android:padding="@dimen/padding_medium"
        android:text="@string/study_settings"
        android:textAlignment="viewStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bottomCloneTextView"
        style="@style/SecondaryMenuTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_clone"
        android:drawablePadding="@dimen/padding_large"
        android:padding="@dimen/padding_medium"
        android:text="@string/study_clone"
        android:textAlignment="viewStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bottomDeleteTextView"
        style="@style/SecondaryTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="@dimen/padding_large"
        android:padding="@dimen/padding_medium"
        android:text="@string/study_delete"
        android:textAlignment="viewStart"
        android:textColor="@color/coralRed" />
</LinearLayout>